2002-07-01  LaMont Jones  <lamont@smallone.fc.hp.com>

	* ffcall/callback/trampoline_r/trampoline.c (alloc_trampoline_r)
	(is_tramp): work around a bug in gcc 3.*
	* ffcall/avcall/avcall-hppa.s:
	* ffcall/callback/trampoline_r/cache-hppa.s:
	* ffcall/callback/trampoline_r/proto-hppa.s:
	* ffcall/callback/trampoline_r/tramp-hppa.s:
	* ffcall/callback/vacall_r/vacall-hppa.s:
	* ffcall/trampoline/cache-hppa.s:
	* ffcall/trampoline/proto-hppa.s:
	* ffcall/trampoline/tramp-hppa.s:
	* ffcall/vacall/vacall-hppa.s:
	support both HP-UX assembler and GAS

2002-07-01  Sam Steingold  <sds@gnu.org>

	* makemake.in (echotab_mkdir_maybe): pass `-p' to mkdir(1)
	(shared): new make var; create it before doc dirs

2002-06-29  Sam Steingold  <sds@gnu.org>

	implemented feature request [ 575303 ]: quit to top-level in debugger
	* reploop.lisp (debug-quit): new function
	(commands1): document `Quit/:q'
	(break-loop, step-hook-fn): handle it (as `abort-to-top')
	* control.d (UNWIND-TO-TOP): new function
	* constsym.d, subr.d (unwind_to_top): ditto

2002-06-28  Sam Steingold  <sds@gnu.org>

	* configure: work around the ulimit bug in cygwin /bin/sh

2002-06-28  Sam Steingold  <sds@gnu.org>

	* lispbibl.d (alloca) [UNIX_CYGWIN32]: already defined in <alloca.h>

2002-06-27  Sam Steingold  <sds@gnu.org>

	fixed Sparc/Linux glibc 2.2 --with-debug build
	* lispbibl.d (oint_type_*, oint_data_*) [SPARC UNIX_LINUX]:
	do special handling only for glibc 2.1 and earlier

2002-06-27  Sam Steingold  <sds@gnu.org>

	* configure: check stack limit and suggest ulimit when printing
	further recommendations and call ulimit before make

2002-06-26  Sam Steingold  <sds@gnu.org>

	* lispbibl.d: separate `chart' and `object'
	(object, as_oint, as_object) [OBJECT_STRUCT]: `one' --> `one_o'
	(chart, as_cint, as_chart) [CHART_STRUCT]: `one' --> `one_c'
	* stream.d (stream_reset_eltype): compare ch with LF properly
	* array.d (make_storagevector): use char_int(), not as_cint(), to
	convert an object to `cint'