@@ -59,6 +59,9 @@ User visible changes
   (MAKE-ENCODING :CHARSET CHARSET:UNICODE-32-LITTLE-ENDIAN
                  :INPUT-ERROR-ACTION :IGNORE).
 
+* Wide-mode -W backward compatibility option is now gone
+  (defunct since 1998-09-09).
+
 2.28 (2002-03-03)
 =================
 
